<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaFacturas"
    android:padding="15dp">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivVolver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/volver" />
      </LinearLayout>
      <LinearLayout
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:layout_marginBottom="15dp"
          tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/iconocoopappi" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_del_socio"
            android:textSize="@dimen/text16sp"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14sp"
          android:text="@string/socio"/>
        <TextView
            android:id="@+id/tvNombreSocio"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14sp"
            android:text="@string/cfijo"/>
        <TextView
            android:id="@+id/tvCodigoFijo"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14sp"
            android:text="@string/cod_ubicaci_n"/>
        <TextView
            android:id="@+id/tvCodUbicacion"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:textSize="@dimen/text14sp"
          android:text="@string/total_monto"/>
        <TextView
            android:id="@+id/tvTotalMonto"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_facturas_impagas"
            android:textSize="@dimen/text14sp"/>
        <TextView
            android:id="@+id/tvTotalFacturaImpaga"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14sp"
            android:text="@string/fecha_de_corte"/>
        <TextView
            android:id="@+id/tvfechaCorte"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
      </LinearLayout>
      <LinearLayout
          android:layout_marginTop="15dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="355dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text16sp"
            android:text="@string/historial"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            tools:ignore="NestedScrolling">

          <HorizontalScrollView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fillViewport="true">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
          </HorizontalScrollView>
        </ScrollView>
      </LinearLayout>
    </LinearLayout>

  </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>